--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
               <div class="col-lg-12 col-sm-12 col-md-12"> 
                 <div class=" container ourstory justify-content-center"> 
                   <div class="container p-5"> 
-                      <h1  class="text-center">Our Story</h1>
+                      <h1  class="text-center mb-4">Our Story</h1>
                       <p>As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
                       <p>Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
                       <p class="pb-5">Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
