--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -277,6 +277,47 @@
 </section>
 <!--  ENDING  O-SHOT -->
 
+<!-- O-SHOT -->
+<section>
+  <div class="container mb-5">
+      <div class="row"> 
+          <h3 class="pb-3">O-SHOT </h3>
+          <div class="col-lg-6 col-md-12 col-sm-12 pt-2">
+              <img src="assets/img/8.png" class="img-fluid"  alt="">
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+           <span>
+              <!-- O-SHOT -->
+<section>
+  <div class="container mb-5">
+      <div class="row"> 
+          <h3 class="pb-3">O-SHOT </h3>
+          <div class="col-lg-6 col-md-12 col-sm-12 pt-2">
+              <img src="assets/img/8.png" class="img-fluid"  alt="">
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+           <span>
+              O-Shot: Improve Intimacy and Sensations 
+              Increase the quality of your intimate experiences with O-Shot treatment at Aruna Hospital couples clinics.
+              O-Shot, short for Orgasm Shot, is a non-surgical treatment to increase sexual satisfaction in women. This is a quick and painless injection of platelet-rich plasma (PRP) to stimulate tissue rejuvenation in the vaginal area.  <br>
+              Benefits:  <br>
+              Increased sexual desire and arousal 
+              Increased intensity of orgasm Improve vaginal tone 
+              Improved overall sexual well-being 
+              Revive your intimacy and enjoy a more satisfying sex life. Contact Aruna Hospital Couples Clinic for a consultation today! 
+           </span>
+          </div>
+      </div>
+  </div>
+</section>
+<!--  ENDING  O-SHOT -->
+           </span>
+          </div>
+      </div>
+  </div>
+</section>
+<!--  ENDING  O-SHOT -->
+
 
 <!--  FOOTER -->
 
