adding content and images in services page

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -45,13 +45,27 @@
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
         <img src="assets/img/logo.png" alt="">
       </a>
-      <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
+      <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
+        <div class="dropdown show">
+            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
+                SERVICES
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+                <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
+                <a class="dropdown-item" href="male.html">Male</a>
+                <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+            </div>
+        </div>
+    </a>
+    
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2" >
         <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
