--- a/index.html
+++ b/index.html
@@ -519,6 +519,26 @@
                     <li>Post Delivery Rehabilitation</li>
                     <li>G-Shot</li>
                     <li>O-Shot</li>
+                    <li>Female Sexual Dysfunction</li>
+                    <li>Laser Hair Reduction </li>
+                    <li> Bikkini Laser Hair Removal</li>
+                    <li> Vulva Hair Reduction</li>
+                    <li> Senatine Peels</li>
+                    <li> Strech Mark Management</li>
+                    <li> Breast Sagging</li>
+                    <li> Facial Rejuvenation</li>
+                    <li> Melasma</li>
+                    <li> Hair Loss Treatments</li>
+                    <li>PRP</li>
+                    <li> Mommy Make Over</li>
+                    <li>Underarm Peels</li>
+                    <li>Body Peels</li>
+                    <li>Hollywood Facial</li>
+                    <li>Medi Facial</li>
+                    <li>Hand and Feet Rejuvenation</li>
+                    <li> Renopauscl</li>
+                    <li> Reto</li>
+                    <li> Anclic Scar Management</li>
                     <a href="femalenonsurgical.html" class="btn btn-dark">Click Here</a>
                   </div>
                 </div>
