adding mens cilinic logo and content to services

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <!-- Header Large Screen only  -->
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand ms-5" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,9 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
       <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
@@ -62,6 +64,7 @@
 
  
 <!-- Header Small and medium Screen only  -->
+
 <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
@@ -72,15 +75,17 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
-      <a class="nav-item nav-link" href="#" id="navlink2">
+      <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -3%;">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
         <button type="button" class="btn btn-primary "  id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -157,7 +162,7 @@
               <h5 class="pb-3">QUICK LINKS</h5>
               <h6><a href="index.html">Home</a></h6>
               <h6><a href="index.html">About</a></h6>
-              <h6><a href="femalenonsurgical.html">Services</a></h6>
+              <h6><a href="index.html#vaginal-rejuvenation">Services</a></h6>
               <h6><a href="gallery.html">Gallery</a></h6>
               <h6><a href="contact.html">Contact</a></h6>
             </div>
