--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -41,7 +41,9 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
@@ -72,30 +74,47 @@
   
    
   <!-- Header Small and medium Screen only  -->
-  <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
-    <a class="navbar-brand" href="#">
-      <img src="assets/img/logo.png" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto justify-content-between">
-        <a class="nav-item nav-link" href="#" id="navlink2">
-          <img src="assets/img/logo.png" alt="">
-        </a>
-        <a class="nav-item nav-link" href="#" id="navlink2">
-          <div class="d-flex align-items-center">
-            <img src="assets/img/phone.svg" alt="">
-            <h5 class="ml-2">+79979901881</h5>
+
+
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto justify-content-between">
+      <a class="nav-item nav-link" href="#" id="navlink2">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
+      </a>
+      <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -5%;">
+        <div class="d-flex align-items-center">
+          <img src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">+79979901881</h5>
+        </div>
+      </a> 
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2"  style="margin-top: -5%;">
+        <div class="dropdown show" style="margin-top: -13%;">
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
+             SERVICES
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
+            <a class="dropdown-item" href="male.html">Male</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
           </div>
-        </a>
-        <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
-          <button type="button" class="btn btn-primary mt-2" id="button">APPOINTMENT</button>
-        </a>
-      </div>
+        </div>
+      </a>         
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+        <button type="button" class="btn btn-primary" style="background-color: #036DA4;" >APPOINTMENT</button>
+      </a>
     </div>
-  </nav>
+  </div>
+</nav>
   
     <!-- Header -->
 
@@ -112,7 +131,8 @@
 <!--  ENDING  MAIN SECTION -->
 
 <!--  HYMENOPLASTY -->
-<section>
+
+<section id="hymenoplasty">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">HYMENOPLASTY</h3>
@@ -133,10 +153,12 @@
         </div>
     </div>
 </section>
+
 <!--  ENDING  HYMENOPLASTY -->
 
-<!--  URINARY LABIOMINORAPLASTY -->
-<section>
+<!--  LABIOMINORAPLASTY -->
+
+<section  id="labiominoraplasty">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3" >LABIOMINORAPLASTY</h3>
@@ -157,10 +179,12 @@
         </div>
     </div>
 </section>
+
 <!--  ENDING  LABIOMINORAPLASTY -->
 
-<!--  VAGINAL  LABIOMAJORAPLASTY  -->
-<section>
+<!--  LABIOMAJORAPLASTY  -->
+
+<section  id="labiomajoraplasty">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">LABIOMAJORAPLASTY </h3>
@@ -181,10 +205,11 @@
         </div>
     </div>
 </section>
-<!--  ENDING  LABIOMAJORAPLASTY -->
+<!--  ENDING  LABIOMAJORAPLASTY  -->
 
 <!--  CLITORAL HOOD REDUCTION   -->
-<section>
+
+<section id="clitoral-hood-reduction">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> CLITORAL HOOD REDUCTION  </h3>
@@ -205,10 +230,12 @@
         </div>
     </div>
 </section>
+
 <!--  ENDING CLITORAL HOOD REDUCTION  -->
 
-<!--  CLITORAL UNHOODING     -->
-<section>
+<!--  CLITORAL UNHOODING  -->
+
+<section id="clitoral-unhooding">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">CLITORAL UNHOODING </h3>
@@ -229,12 +256,13 @@
         </div>
     </div>
 </section>
+
 <!--  ENDING  CLITORAL UNHOODING  -->
 
 
 <!--  MONSPLATY  -->
 
-<section>
+<section id="monsplaty">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> MONSPLATY  </h3>
@@ -288,7 +316,7 @@
               <h5 class="pb-3">QUICK LINKS</h5>
               <h6><a href="index.html">Home</a></h6>
               <h6><a href="about.html">About</a></h6>
-              <h6><a href="femalenonsurgical.html">Services</a></h6>
+              <h6><a href="index.html#vaginal-rejuvenation">Services</a></h6>
               <h6><a href="gallery.html">Gallery</a></h6>
               <h6><a href="contact.html">Contact</a></h6>
             </div>
