--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
 <!-- Header Large Screen only  -->
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand ms-5" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,8 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
       </a>
       <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
@@ -69,7 +70,9 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
       <a class="nav-item nav-link" href="#" id="navlink2">
         <div class="d-flex align-items-center">
@@ -96,13 +99,13 @@
 
             <div class=" container firstpart mb-5">
                 <div class="row"> 
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12 col-md-12">
                       <img src="assets/img/galleryimg2.jpeg"  class="img-fluid" alt="">
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12 col-md-12">
                       <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt="">
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12 col-md-12">
                       <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt="">
                     </div>
                 </div>
@@ -110,13 +113,13 @@
 
             <div class=" container firstpart mb-5">
               <div class="row"> 
-                  <div class="col-4">
+                  <div class="col-lg-4 col-sm-12 col-md-12">
                     <img src="assets/img/galleryimg4.jpeg"  class="img-fluid" alt="">
                   </div>
-                  <div class="col-4">
+                  <div class="col-lg-4 col-sm-12 col-md-12">
                     <img src="assets/img/galleryimg5.jpeg"  class="img-fluid" alt="">
                   </div>
-                  <div class="col-4">
+                  <div class="col-lg-4 col-sm-12 col-md-12">
                     <img src="assets/img/galleryimg6.jpeg"  class="img-fluid" alt="">
                   </div>
               </div>
@@ -124,13 +127,13 @@
 
           <div class=" container firstpart mb-5">
             <div class="row"> 
-                <div class="col-4">
+                <div class="col-lg-4 col-sm-12 col-md-12">
                   <img src="assets/img/galleryimg7.jpeg"  class="img-fluid" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-sm-12 col-md-12">
                   <img src="assets/img/galleryimg8.jpeg"  class="img-fluid" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-sm-12 col-md-12">
                   <img src="assets/img/galleryimg9.jpeg"  class="img-fluid" alt="">
                 </div>
             </div>
@@ -171,7 +174,7 @@
                 <h5 class="pb-3">QUICK LINKS</h5>
                 <h6><a href="index.html">Home</a></h6>
                 <h6><a href="about.html">About</a></h6>
-                <h6><a href="femalenonsurgical.html">Services</a></h6>
+                <h6><a href="index.html#vaginal-rejuvenation">Services</a></h6>
                 <h6><a href="gallery.html">Gallery</a></h6>
                 <h6><a href="contact.html">Contact</a></h6>
               </div>
