--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <!-- Adding bootstrap plugin for Header -->
-
+  
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -108,7 +108,7 @@
 <!-- Header Large Screen only  -->
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand ms-5" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,7 +118,7 @@
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/menscilinic3.png" alt="">
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
       </a>
       <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
@@ -132,7 +132,8 @@
     </div>
   </div>
 </nav>
-  <!-- Header -->
+
+<!-- Header -->
 
  
 <!-- Header Small and medium Screen only  -->
@@ -175,7 +176,7 @@
   </div>
 </nav>
 
-  <!-- Header -->
+<!-- Header -->
 
 
   <!-- Ending  Header -->
@@ -320,6 +321,7 @@
   <!--  ENDING ARE YOU LOOKING  -->
 
   <!-- OUR SERVICES -->
+
   <div class="container-fluid ourservices" id="ourservices">
     <h1 class="text-center">Our services</h1>
     <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
@@ -494,7 +496,8 @@
   <!-- ENDING   WHY CHOOSE -->
 
   <!-- VAGINAL REJUVENATION -->
-  <section>
+
+  <section id="vaginal-rejuvenation">
     <div class="container-fluid Vaginalrejuvenation p-5">
       <div class="container">
         <div class="row">
@@ -512,33 +515,34 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                   aria-labelledby="panelsStayOpen-headingOne">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
-                    <li>Vaginal Rejuvenation</li>
-                    <li>Urinary Incontinence</li>
-                    <li>Vaginal Dryness & Infection</li>
-                    <li>Vaginal Disccharge</li>
-                    <li>Post Delivery Rehabilitation</li>
-                    <li>G-Shot</li>
-                    <li>O-Shot</li>
-                    <li>Female Sexual Dysfunction</li>
-                    <li>Laser Hair Reduction </li>
-                    <li> Bikkini Laser Hair Removal</li>
-                    <li> Vulva Hair Reduction</li>
-                    <li> Senatine Peels</li>
-                    <li> Strech Mark Management</li>
-                    <li> Breast Sagging</li>
-                    <li> Facial Rejuvenation</li>
-                    <li> Melasma</li>
-                    <li> Hair Loss Treatments</li>
-                    <li>PRP</li>
-                    <li> Mommy Make Over</li>
-                    <li>Underarm Peels</li>
-                    <li>Body Peels</li>
-                    <li>Hollywood Facial</li>
-                    <li>Medi Facial</li>
-                    <li>Hand and Feet Rejuvenation</li>
-                    <li> Renopauscl</li>
-                    <li> Reto</li>
-                    <li> Anclic Scar Management</li>
+                    <!-- <li>Vaginal Rejuvenation</li> -->
+                    <li><a href="femalenonsurgical.html#vaginal-rejuvenation">Vaginal Rejuvenation</a></li>
+                    <li><a href="femalenonsurgical.html#urinary-incontinence">Urinary Incontinence</a></li>
+                    <li><a href="femalenonsurgical.html#vaginal-dryness-and-infection">Vaginal Dryness & Infection</a></li>
+                    <li><a href="femalenonsurgical.html#vaginal-discharge">Vaginal Discharge </a></li>
+                    <li><a href="femalenonsurgical.html#post-delivery-rehabilitation"> Post Delivery Rehabilitation </a></li>
+                    <li><a href="femalenonsurgical.html#g-shot">G-Shot </a></li>
+                    <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li>
+                    <li><a href="femalenonsurgical.html#female-sexual-dysfunction">Female Sexual Dysfunction </a></li>
+                    <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
+                    <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair Removal </a></li>
+                    <li><a href="femalenonsurgical.html#vulva-hair-reduction">Vulva Hair Reduction </a></li>
+                    <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li>
+                    <li><a href="femalenonsurgical.html#strech-mark-management">Strech Mark Management </a></li>
+                    <li><a href="femalenonsurgical.html#breast-sagging">Breast Sagging </a></li>
+                    <li><a href="femalenonsurgical.html#facial-rejuvenation">Facial </a>Rejuvenation</li>
+                    <li> <a href="femalenonsurgical.html#melasma">Melasma </a></li>
+                    <li><a href="femalenonsurgical.html#hair-loss-treatments">Hair Loss Treatments </a></li>
+                    <li><a href="femalenonsurgical.html#prp">PRP </a></li>
+                    <li><a href="femalenonsurgical.html#mommy-make-over">Mommy Make Over </a></li>
+                    <li><a href="femalenonsurgical.html#under-arm-peels">Underarm Peels </a></li>
+                    <li><a href="femalenonsurgical.html#body-peels">Body Peels </a> </li>
+                    <li><a href="femalenonsurgical.html#hollywood-facial">Hollywood Facial</a> </li>
+                    <li><a href="femalenonsurgical.html#medi-facial">Medi Facial </a> </li>
+                    <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation">Hand and Feet Rejuvenation </a> </li>
+                    <li><a href="femalenonsurgical.html#tattoo-removal">Tattoo Removal </a></li>
+                    <li><a href="femalenonsurgical.html#menopause">Menopause </a> </li>
+                    <li><a href="femalenonsurgical.html#ankle-scar-management">Ankle  Scar Management</a> </li>
                     <a href="femalenonsurgical.html" class="btn btn-dark">Click Here</a>
                   </div>
                 </div>
@@ -555,12 +559,12 @@
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingTwo">
                   <div class="accordion-body" style="background-color: #046BA3; color: #ffff;">
-                    <li>Hymenoplasty</li>
-                    <li>Labiominoraplasty</li>
-                    <li>Labiomajoraplasty</li>
-                    <li>Clitoral hood reduction</li>
-                    <li>Clitoral unhooding</li>
-                    <li>Monsplasty</li>
+                    <li><a href="femalesurgical.html#hymenoplasty">Hymenoplasty</a></li>
+                    <li><a href="femalesurgical.html#labiominoraplasty">Labiominoraplasty</a></li>
+                    <li><a href="femalesurgical.html#labiomajoraplasty">Labiomajoraplasty</a></li>
+                    <li><a href="femalesurgical.html#clitoral-hood-reduction">Clitoral hood reduction</a></li>
+                    <li><a href="femalesurgical.html#clitoral-unhooding">Clitoral unhooding</a></li>
+                    <li><a href="femalesurgical.html#monsplaty">Monsplasty </a></li>
                     <a href="femalesurgical.html" class="btn btn-dark">Click Here</a>
                   </div>
                 </div>
@@ -577,9 +581,9 @@
                 <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingThree">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
-                    <li>Erectile Dysfunction</li>
-                    <li>Urine Incontinence</li>
-                    <li>Premature Ejaculation</li>
+                    <li><a href="male.html#erectile-dysfunction">Erectile Dysfunction</a></li>
+                    <li><a href="male.html#urine-incontinence">Urine Incontinence</a></li>
+                    <li><a href="male.html#premature-ejaculation">Premature Ejaculation</a></li>
                     <a href="male.html" class="btn btn-dark">Click Here</a>
                   </div>
                 </div>
@@ -597,9 +601,9 @@
                   aria-labelledby="panelsStayOpen-headingFour">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
 
-                    <li>Focused Extracorporeal Shockwave Therapy</li>
-                    <li>HIFEM Chair (Emsella Chair)</li>
-                    <li>P-Shot</li>
+                    <li><a href="ExectileDysfunctionProcedure.html#">Focused Extracorporeal Shockwave Therapy</a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#">HIFEM Chair (Emsella Chair)</a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#">P-Shot</a></li>
                     <a href="ExectileDysfunctionProcedure.html" class="btn btn-dark">Click Here</a>
                   </div>
                 </div>
@@ -816,7 +820,7 @@
               <h5 class="pb-3">QUICK LINKS</h5>
               <h6><a href="index.html">Home</a></h6>
               <h6><a href="about.html">About</a></h6>
-              <h6><a href="#ourservices">Services</a></h6>
+              <h6><a href="#vaginal-rejuvenation">Services</a></h6>
               <h6><a href="gallery.html">Gallery</a></h6>
               <h6><a href="contact.html">Contact</a></h6>
             </div>
