--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -43,7 +43,9 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
@@ -75,6 +77,8 @@
 
  
 <!-- Header Small and medium Screen only  -->
+
+
 <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
@@ -85,16 +89,31 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
-      <a class="nav-item nav-link" href="#" id="navlink2">
+      <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -5%;">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
-      </a>
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
-        <button type="button" class="btn btn-primary mt-2" id="button">APPOINTMENT</button>
+      </a> 
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2"  style="margin-top: -5%;">
+        <div class="dropdown show" style="margin-top: -13%;">
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
+             SERVICES
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
+            <a class="dropdown-item" href="male.html">Male</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+          </div>
+        </div>
+      </a>         
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+        <button type="button" class="btn btn-primary" style="background-color: #036DA4;" >APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -227,7 +246,7 @@
                 <h5 class="pb-3">QUICK LINKS</h5>
                 <h6><a href="index.html">Home</a></h6>
                 <h6><a href="about.html">About</a></h6>
-                <h6><a href="femalenonsurgical.html">Services</a></h6>
+                <h6><a href="index.html#vaginal-rejuvenation">Services</a></h6>
                 <h6><a href="gallery.html">Gallery</a></h6>
                 <h6><a href="contact.html">Contact</a></h6>
               </div>
