--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -43,7 +43,9 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
@@ -74,6 +76,8 @@
 
  
 <!-- Header Small and medium Screen only  -->
+
+
 <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
@@ -84,16 +88,31 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link" href="#" id="navlink2">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/menscilinicfinallogo.png" alt="">
+
       </a>
-      <a class="nav-item nav-link" href="#" id="navlink2">
+      <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -5%;">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
-      </a>
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
-        <button type="button" class="btn btn-primary mt-2" id="button">APPOINTMENT</button>
+      </a> 
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2"  style="margin-top: -5%;">
+        <div class="dropdown show" style="margin-top: -13%;">
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
+             SERVICES
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
+            <a class="dropdown-item" href="male.html">Male</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+          </div>
+        </div>
+      </a>         
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+        <button type="button" class="btn btn-primary" style="background-color: #036DA4;" >APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -115,7 +134,8 @@
 <!--  ENDING  MAIN SECTION -->
 
 <!-- VAGINAL REJUVENATION -->
-<section>
+
+<section   id="vaginal-rejuvenation">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">VAGINAL REJUVENATION</h3>
@@ -135,10 +155,12 @@
         </div>
     </div>
 </section>
+
 <!--  ENDING  VAGINAL REJUVENATION -->
 
 <!--  URINARY INCONTINENCE -->
-<section>
+
+<section   id="urinary-incontinence">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">URINARY INCONTINENCE</h3>
@@ -160,7 +182,7 @@
 <!--  ENDING  URINARY INCONTINENCE -->
 
 <!--  VAGINAL DRYNESS AND INFECTION  -->
-<section>
+<section  id="vaginal-dryness-and-infection">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3" >VAGINAL DRYNESS AND INFECTION </h3>
@@ -189,7 +211,8 @@
 <!--  ENDING  VAGINAL DRYNESS AND INFECTION -->
 
 <!-- VAGINAL  DISCHARGE -->
-<section>
+
+<section   id="vaginal-discharge">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">VAGINAL  DISCHARGE</h3>
@@ -209,10 +232,12 @@
         </div>
     </div>
 </section>
+
 <!--  ENDING  VAGINAL DISCHARGE -->
 
 <!-- POST DELIVERY REHABILITATION -->
-<section>
+
+<section id="post-delivery-rehabilitation">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">POST DELIVERY REHABILITATION</h3>
@@ -242,7 +267,8 @@
 
 
 <!--  G-SHOT -->
-<section>
+
+<section  id="g-shot">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> G-SHOT </h3>
@@ -263,10 +289,12 @@
         </div>
     </div>
 </section>
+
 <!--  ENDING   G-SHOT -->
 
 <!-- O-SHOT -->
-<section>
+
+<section id="o-shot">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">O-SHOT </h3>
@@ -293,7 +321,8 @@
 
 
 <!-- Female Sexual Dysfunction -->
-<section>
+
+<section  id="female-sexual-dysfunction">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">FEMALE SEXUAL DYSFUNCTION</h3>
@@ -317,7 +346,8 @@
 
 
 <!--  LASER HAIR REDUCTION -->
-<section>
+
+<section id="laser-hair-reduction">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3"> LASER HAIR REDUCTION </h3>
@@ -338,7 +368,8 @@
 <!--  ENDING  LASER HAIR REDUCTION -->
 
 <!-- BIKINI LASER HAIR REMOVAL -->
-<section>
+
+<section id="bikini-laser-hair-removal">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">BIKINI LASER HAIR REMOVAL</h3>
@@ -361,7 +392,8 @@
 <!--  ENDING BIKINI LASER HAIR REMOVAL -->
 
 <!-- VULVA HAIR REDUCTION -->
-<section>
+
+<section id="vulva-hair-reduction">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">VULVA HAIR REDUCTION</h3>
@@ -382,10 +414,11 @@
 <!--  ENDING VULVA HAIR REDUCTION -->
 
 <!-- SENATIINE PEELS -->
-<section>
+
+<section id="senatine-peels">
   <div class="container mb-5">
       <div class="row"> 
-          <h3 class="pb-3">SENATIINE PEELS</h3>
+          <h3 class="pb-3">SENATINE PEELS</h3>
           <div class="col-lg-6 col-md-12 col-sm-12">
            <span>
             At Aruna Couples Clinic, our focus is on relationship and sexual health; however, we appreciate the importance of individual well-being and self-care practices. If you're considering a skincare procedure like a senatine peel, it's crucial to consult with qualified dermatologists or skincare professionals who specialize in such treatments.
@@ -405,7 +438,8 @@
 <!--  ENDING SENATIINE PEELS -->
 
 <!-- STRECH MARK MANAGEMENT -->
-<section>
+
+<section id="strech-mark-management">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3"> STRECH MARK MANAGEMENT </h3>
@@ -428,7 +462,8 @@
 <!--  ENDING STRECH MARK MANAGEMENT -->
 
 <!-- BREAST SAGGING -->
-<section>
+
+<section id="breast-sagging">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">BREAST SAGGING</h3>
@@ -453,7 +488,8 @@
 <!--  ENDING BREAST SAGGING -->
 
 <!-- FACIAL REJUVENATION-->
-<section>
+
+<section id="facial-rejuvenation">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">FACIAL REJUVENATION</h3>
@@ -476,7 +512,8 @@
 <!--  ENDING FACIAL REJUVENATION -->
 
 <!-- MELASMA -->
-<section>
+
+<section id="melasma">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">MELASMA</h3>
@@ -499,7 +536,8 @@
 
 
 <!-- HAIR LOSS TREATMENTS -->
-<section>
+
+<section id="hair-loss-treatments">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">HAIR LOSS TREATMENTS</h3>
@@ -522,7 +560,7 @@
 
 <!-- PRP -->
 
-<section>
+<section id="prp">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">PRP</h3>
@@ -545,7 +583,7 @@
 
 <!-- MOMMY MAKE OVER -->
 
-<section>
+<section id="mommy-make-over">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">MOMMY MAKE OVER</h3>
@@ -568,7 +606,7 @@
 
 <!-- UNDERARM PEELS -->
 
-<section>
+<section id="under-arm-peels">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">UNDERARM PEELS</h3>
@@ -591,7 +629,7 @@
 
 <!--  BODY PEELS -->
 
-<section>
+<section id="body-peels">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">BODY PEELS</h3>
@@ -613,7 +651,7 @@
 
 <!--   HOLLYWOOD FACIAL -->
 
-<section>
+<section id="hollywood-facial">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">HOLLYWOOD FACIAL</h3>
@@ -635,7 +673,7 @@
 
 <!--   MEDI FACIAL -->
 
-<section>
+<section id="medi-facial">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">MEDI FACIAL</h3>
@@ -659,7 +697,7 @@
 
 <!--  HAND AND FEET REJUVENATION -->
 
-<section>
+<section id="hand-and-feet-rejuvenation">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">HAND AND FEET REJUVENATION</h3>
@@ -682,7 +720,7 @@
 
 <!-- TATTOO REMOVAL -->
 
-<section>
+<section id="tattoo-removal">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">TATTOO REMOVAL</h3>
@@ -705,7 +743,7 @@
 
 <!-- MENOPAUSE -->
 
-<section>
+<section id="menopause">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">MENOPAUSE</h3>
@@ -727,7 +765,7 @@
 
 <!-- ANKLE SCAR MANAGEMENT -->
 
-<section>
+<section id="ankle-scar-management">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">ANKLE SCAR MANAGEMENT </h3>
@@ -746,9 +784,6 @@
 </section>
 
 <!--  ENDING  ANKLE SCAR MANAGEMENT  -->
-
- 
- 
 
 
 <!--  FOOTER -->
@@ -779,7 +814,7 @@
                 <h5 class="pb-3">QUICK LINKS</h5>
                 <h6><a href="index.html">Home</a></h6>
                 <h6><a href="about.html">About</a></h6>
-                <h6><a href="femalenonsurgical.html">Services</a></h6>
+                <h6><a href="index.html#vaginal-rejuvenation">Services</a></h6>
                 <h6><a href="gallery.html">Gallery</a></h6>
                 <h6><a href="contact.html">Contact</a></h6>
               </div>
