--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -33,8 +33,8 @@
 
 <!-- Header Large Screen only  -->
 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
-  <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
+  <a class="navbar-brand" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
-      <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
+      <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="assets/img/menscilinicfinallogo.png" alt="">
 
@@ -79,8 +79,8 @@
 <!-- Header Small and medium Screen only  -->
 
 
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
-  <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
+  <a class="navbar-brand" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
-      <a class="nav-item nav-link" href="#" id="navlink2">
+      <a class="nav-item nav-link" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="assets/img/menscilinicfinallogo.png" alt="">
 
@@ -135,7 +135,7 @@
   <!--  ENDING  MAIN SECTION -->
 
 <!--  Focused Extracorporeal Shock wave Therapy   -->
-<section>
+<section id="focused-extracorporeal-shock-wave-therapy">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Focused Extracorporeal Shock wave Therapy  </h3>
@@ -162,7 +162,7 @@
 <!--  ENDING   Focused Extracorporeal Shock wave Therapy  -->
 
 <!--  HIFEM Chair ( Emsella Chair )  -->
-<section>
+<section id="hifem-chair">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">HIFEM Chair</h3>
@@ -187,7 +187,7 @@
 <!--  ENDING  LABIOMINORAPLASTY -->
 
 <!--  P-SHOT -->
-<section>
+<section id="p-shot">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5"> P-Shot  </h3>
