--- a/command.html
+++ b/command.html
@@ -52,3 +52,115 @@ navbar home the main page navbar -->
     </div>
   </nav>
     <!-- Header -->
+
+
+    
+  <!--  FOUNDERS -->
+  <section>
+    <div class="container founders p-5 mb-5 rounded">
+      <div class="row">
+         <!-- FOUNDERS FIRST PART -->
+        <div class="col-lg-3  col-sm-6 col-md-6 d-flex">
+          <img src="assets/img/Group.svg" alt="">
+          <div class="ps-4 pe-1" style="border-right:1px solid #000;">
+            <h1>22</h1>
+            <h6>Founders</h6>
+          </div>
+        </div>
+         <!-- FOUNDERS SECOND PART -->
+        <div class="col-lg-3  col-sm-6 col-md-6 d-flex">
+            <img src="assets/img/Group (1).svg" alt="">
+          <div class="col-9" style="border-right:1px solid #000;">
+            <h1>567+</h1>
+            <h6>Happy Patients</h6>
+          </div>
+        </div>
+         <!-- FOUNDERS THIRD PART -->
+        <div class="col-lg-3  col-sm-6 col-md-6 ps-4 d-flex">
+            <img src="assets/img/Group (2).svg" alt="">
+          <div class="col-9" style="border-right:1px solid #000;">
+            <h1>48</h1>
+            <h6>Number of staffs</h6>
+          </div>
+        </div>
+         <!-- FOUNDERS FOURTH  PART -->
+        <div class="col-lg-3 col-sm-6 col-md-6 d-flex">
+          <div class="col-3"> 
+            <img src="assets/img/Group (3).svg" alt="">
+          </div>
+          <div class="col-9">
+            <h1>26</h1>
+            <h6>Award Winning</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ENDING FOUNDERS -->
+
+
+   <!--  OUR DOCTORS -->
+   <section>
+    <div class="container-fluid ourdoctors">
+      <div class="container">
+        <!-- <div class="row"> -->
+        <!-- <div class="col-lg-6 col-sm-12 col-md-12"> -->
+        <h1 class="text-center mb-2">Our Doctors</h1>
+        <h6 class="text-center">Our Doctors of experienced gynecologists and plastic surgeons is committed to providing
+          you with
+          personalized care and exceptional results. </h6>
+        <h6 class="text-center pb-3">Our experienced team offers individual support in a discreet and pleasent
+          atmosphere </h6>
+        <br>
+        <!-- </div> -->
+        <!-- </div>   -->
+        <!-- <div class="col-lg-6 col-sm-12 col-md-12 row ">
+            <div class="col-lg-4 col-sm-6 col-md-6 ms-5 me-5">
+              <img src="assets/img/doctor1.png" class="img-fluid" alt="doctorimage1">
+            </div>
+            <div class="col-lg-4 col-sm-6 col-md-6 ms-5">
+              <img src="assets/img/doctor2.png" class="img-fluid" alt="doctorimage3">
+            </div>
+          </div> -->
+        <div class="container mb-5">
+          <div class="row">
+            <!-- First Doctor -->
+            <div class="col-md-6 mt-5 mt-md-0">
+              <div class="row">
+                <div class="col-md-5">
+                  <!-- Doctor Image -->
+                  <img src="assets/img/doctor1.png" alt="Doctor 1" class="img-fluid   rounded-circle">
+                </div>
+                <div class="col-md-7 text-center text-md-left align-self-center">
+                  <!-- Doctor Details -->
+                  <h3 class="mt-3 mt-md-0 pt-4 mt-2">Dr. Chavakula <br />Seshaggiri Rao</h3>
+                  <p class="mb-0">M.S. General Surgery</p>
+                  <p class="mb-0">Consultant Endoscopy</p>
+                  <p class="mb-0">Laparoscopic Surgeon</p>
+                </div>
+              </div>
+            </div>
+            <!-- Second Doctor -->
+            <div class="col-md-6 mt-5 mt-md-0">
+              <div class="row">
+                <div class="col-md-5">
+                  <!-- Doctor Image -->
+                  <img src="assets/img/doctor2.png" alt="Doctor 2" class="img-fluid   rounded-circle">
+                </div>
+                <div class="col-md-7 text-center text-md-left align-self-center">
+                  <!-- Doctor Details -->
+                  <h3 class="mt-3 mt-md-0">Dr. Chavakula <br />Himmabindu</h3>
+                  <p class="mb-0">M.S., OBG</p>
+                  <p class="mb-0">Gynecology</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="contactbtn text-center mt-5">
+            <a href="contact.html" class="btn btn-primary" id="button">Contact Us</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ENDING   OUR DOCTORS -->
