--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -33,8 +33,8 @@
 
 <!-- Header Large Screen only  -->
 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
-  <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
+  <a class="navbar-brand" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
-      <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
+      <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="assets/img/menscilinicfinallogo.png" alt="">
 
@@ -78,8 +78,8 @@
 <!-- Header Small and medium Screen only  -->
 
 
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
-  <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
+  <a class="navbar-brand" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,10 +87,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
-      <a class="nav-item nav-link" href="#" id="navlink2">
+      <a class="nav-item nav-link" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="assets/img/menscilinicfinallogo.png" alt="">
-
       </a>
       <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -5%;">
         <div class="d-flex align-items-center">
