adding up scroll button

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
 
 <!--  CONTACT US  -->
 
-  <section class="md-5"> 
+  <section class="md-5"  id="main_img"> 
       <div class="container-fluid  contactus">
           <div class="container">
             <div class="map-container">
@@ -202,6 +202,13 @@
   </section>
   </footer>
   <!--  ENDING  FOOTER -->
+
+   <!--  scroll down menu -->
+   <div class="circle-icon-container">
+    <div class="circle-icon">
+    <a href="#main_img" class="circle-icon "  ><i class="bi bi-arrow-up-circle-fill"></i></a>
+    </div>
+    </div>
 
 </body>
 </html>
