--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
 
 <!--  MAIN SECTION -->
 
-<section>
+<section  id="main_img">
   <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
           <h3 class="pb-3">GALLERY</h3>
@@ -201,6 +201,13 @@
 
     
     <!--  ENDING  FOOTER -->
+
+  <!--  scroll down menu -->
+  <div class="circle-icon-container">
+    <div class="circle-icon">
+    <a href="#main_img" class="circle-icon "  ><i class="bi bi-arrow-up-circle-fill"></i></a>
+    </div>
+    </div>
 
 
 </body>
