--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 
 <!-- Header Large Screen only  -->
-
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
+<header id="main_img"> 
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top"  >
   <a class="navbar-brand ms-5" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -132,6 +132,7 @@
     </div>
   </div>
 </nav>
+</header>
 
 <!-- Header -->
 
@@ -220,8 +221,8 @@
   </div>
 
   <!-- FULFILING LOVE -->
-
-  <section class="md-5 d-flex">
+ <section  > 
+  <section class="md-5 d-flex" >
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -251,6 +252,7 @@
     </div>
     </div>
   </section>
+</section>
 
   <!--  ENDING  FULFILING  LOVE -->
 
@@ -327,8 +329,8 @@
   <!-- OUR SERVICES -->
 
   <div class="container-fluid ourservices" id="ourservices">
-    <h1 class="text-center">Our services</h1>
-    <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
+    <!-- <h1 class="text-center">Our services</h1>
+    <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6> -->
 
     <div id="carouselExampleControls" class="carousel carousel-dark slide col-lg-12 col-sm-12 col-md-12"
       data-bs-ride="carousel">
@@ -504,6 +506,8 @@
   <section id="vaginal-rejuvenation">
     <div class="container-fluid Vaginalrejuvenation p-5">
       <div class="container">
+        <h1 class="text-center">Our services</h1>
+        <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
         <div class="row">
           <div class="col-lg-6 col-sm-12 col-md-12">
             <!--  BOOTSTRAP ACCORDION -->
@@ -751,6 +755,13 @@
   <a href="https://api.whatsapp.com/send?phone=918341350693" class="whatsapp-link shadow" target="_blank">
     <i class="bi bi-whatsapp"></i>
   </a>
+  
+   <!--  scroll down menu -->
+  <div class="circle-icon-container">
+    <div class="circle-icon">
+    <a href="#main_img" class="circle-icon "  ><i class="bi bi-arrow-up-circle-fill"></i></a>
+    </div>
+    </div>
 
   <!--  ENDING  FOOTER -->
 
