--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 
 <!--  ABOUT US  -->
 
-  <section class="md-5"> 
+  <section class="md-5"  id="main_img"> 
       <div class="container-fluid aboutus">
           <div class="container"> 
               <div class="row"> 
@@ -187,6 +187,13 @@
 </section>
 </footer>
 <!--  ENDING  FOOTER -->
+
+ <!--  scroll down menu -->
+ <div class="circle-icon-container">
+  <div class="circle-icon">
+  <a href="#main_img" class="circle-icon "  ><i class="bi bi-arrow-up-circle-fill"></i></a>
+  </div>
+  </div>
 
 
 </body>
