--- a/appoinment.html
+++ b/appoinment.html
@@ -23,6 +23,71 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
+
+<!-- Header Large Screen only  -->
+
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
+    <a class="navbar-brand ms-5" href="index.html">
+      <img src="assets/img/logo.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto justify-content-between">
+        <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
+          <!-- <img src="assets/img/logo.png" alt=""> -->
+          <img src="assets/img/menscilinicfinallogo.png" alt="">
+  
+        </a>
+        <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
+          <div class="d-flex align-items-center">
+            <img src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">+79979901881</h5>
+          </div>
+        </a>
+        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+          <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
+        </a>
+      </div>
+    </div>
+  </nav>
+    <!-- Header -->
+  
+   
+  <!-- Header Small and medium Screen only  -->
+  
+  <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
+    <a class="navbar-brand" href="index.html">
+      <img src="assets/img/logo.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto justify-content-between">
+        <a class="nav-item nav-link" href="male.html" id="navlink2">
+          <!-- <img src="assets/img/logo.png" alt=""> -->
+          <img src="assets/img/menscilinicfinallogo.png" alt="">
+  
+        </a>
+        <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -3%;">
+          <div class="d-flex align-items-center">
+            <img src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">+79979901881</h5>
+          </div>
+        </a>
+        <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+          <button type="button" class="btn btn-primary "  id="button">APPOINTMENT</button>
+        </a>
+      </div>
+    </div>
+  </nav>
+  
+    <!-- Header -->
+
+
+
     <!-- MAIN SECTION -->
 
     <section>
@@ -32,13 +97,11 @@
                      <img src="assets/img/appoinment.png" alt="" height="auto" width="auto">
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
-                    <h1 class="mt-5 ms-5">Make An Appoinment</h1>
+                    <h1 class="mt-4 ms-5 pt-2">Make An Appoinment</h1>
                     <br>
                     <form id="appoinmentfrom">
                         <input type="text" placeholder="Your Name" class="p-3" required>
-                        <br>
                         <input type="text" placeholder="Your Email" class="p-3" required>
-                        <br>
                         <select id="appoinmentfromselect" name="gender"  class="ps-2" required>
                             <option value="" disabled selected>Select Option</option>
                             <option value="male">Male</option>
@@ -53,7 +116,6 @@
                          style="height: 100px;" class="p-3"
                         required>    
                         </div>
-                        <br>
                         <!-- <input type="submit"  id="submit" value="SUBMIT FORM"> -->
                         <!-- <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT FORM</button> -->
                         <a href="#" class="btn btn-primary" id="appoinmentsubmitbtn">SUBMIT FORM</a>
