home page video responsive fixes

--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
             </div> -->
 
             <div id="videoContent" style="display: block;" >
-              <video src="assets/img/home_video.mp4" autoplay loop muted></video>
+              <video src="assets/img/home_video.mp4" width="100%" autoplay loop muted></video>
             </div>
 
             <div id="additionalContent1" style="display: none;">
