adding appoinment image

--- a/appoinment.html
+++ b/appoinment.html
@@ -93,8 +93,9 @@
     <section>
         <div class="container mainsection">
             <div class="row"> 
-                <div class="col-lg-6  col-sm-12 col-md-12 ps-5 mainsectionimage">
-                     <img src="assets/img/appoinment.png" alt="" height="auto" width="auto">
+                <div class="col-lg-6  col-sm-12 col-md-12  mt-5 pt-5 mainsectionimage">
+                     <!-- <img src="assets/img/appoinment.png" alt="" height="auto" width="auto"> -->
+                     <img src="assets/img/appointment 546  392 (1).png" class="img-fluid mt-3" alt="">
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
                     <h1 class="mt-4 ms-5 pt-2">Make An Appoinment</h1>
