--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <!-- Ending  Header -->
 
 
-  <div class="fulfilingloveiconbar" style="margin-top: 10%;">
+  <div class="fulfilingloveiconbar" style="margin-top: 13%;"  style="background-color: transparent;">
     <div class="side-btn" id="side-btn-click">
       <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
         <img src="assets/img/facebook.png" alt="Facebook">
@@ -259,7 +259,7 @@
   <!-- FULFILING  LOVE NAVBAR PART -->
 
   <section>
-    <div class="container" id="fulfilinglovenavbarpart">
+    <div class="container" id="fulfilinglovenavbarpart" >
       <div class="row container  justify-content-center pt-3 d-none d-md-block d-lg-flex">
         <div class="col-lg-6 row">
           <div class="col-1"></div>
